--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-body
-    {
-    background-position: center;
-    background-size: cover;
-    text-align: center;
-    }
 
 .heading
 {
@@ -12,27 +6,19 @@ width: 100%;
 margin: 0px;
 }
 
-#status
-{
-font-size: 18px;
-}
 
-canvas
-{
-box-shadow: 10px 10px 10px grey;
-border-radius: 10px;
-margin-top: 70px;
-}
-a
-{
-  float:right;
-  font-size: 20px !important;
-  margin: 5px;
-  background: black;
-  cursor: pointer;
-  color: white;
-}
-a:hover
-{
-  color:red !important;
-}
+
+body
+    {
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    }
+    a
+    {
+    font-size: 20px !important;
+    width: 400px;
+    border-radius: 30px !important;
+    background-color: white;
+    color: black;
+    }
