--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-body
-    {
-    background-position: center;
-    background-size: cover;
-    text-align: center;
-    }
 
 .heading
 {
@@ -12,27 +6,18 @@ width: 100%;
 margin: 0px;
 }
 
-#status
+#status,#num_obj,#start_mdl
 {
 font-size: 18px;
 }
 
-canvas
-{
-box-shadow: 10px 10px 10px grey;
-border-radius: 10px;
-margin-top: 70px;
+body{
+     background-size: cover;
+     background-position: center;
 }
-a
-{
-  float:right;
-  font-size: 20px !important;
-  margin: 5px;
-  background: black;
-  cursor: pointer;
-  color: white;
-}
-a:hover
-{
-  color:red !important;
+
+canvas{
+     box-shadow:  10px 10px 10px grey;
+     border-radius: 15px;
+     margin-top: 30px;
 }
